ANDROID-47 написал тест на маппер data -> domain